# cxx_hw

./: CMakeLists.txt  README.md
task_1/: CMakeLists.txt  command_processor.cpp  command_processor.hpp  group.cpp  group.hpp  group_manager.cpp  group_manager.hpp  main.cpp  user.cpp  user.hpp  user_manager.cpp  user_manager.hpp
task_2/: main.cpp  type_list.hpp
task_3/: type_map.cpp
task_4/: counter.hpp  less_than_comparable.hpp  main.cpp
task_5/: log.cpp  log.hpp  main.cpp
task_6/: builder.hpp  checkpoint.hpp  director.hpp  main.cpp  penalty_calculator_builder.hpp  text_output_builder.hpp
task_7/: array_set.cpp  array_set.hpp  hash_set.cpp  hash_set.hpp  main.cpp  set_bridge.cpp  set_bridge.hpp
task_8/: math_factory.cpp  math_factory.hpp
task_8/math/operators/: add_operator.hpp
